[gd_scene load_steps=18 format=3 uid="uid://lsv0sh6n7l1o"]

[ext_resource type="Script" path="res://Scripts/Cameras/StepAmplitude.gd" id="1_i2h7m"]
[ext_resource type="Script" path="res://Scripts/General/FSM/StateMachine.gd" id="2_658wc"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerMouseLook.gd" id="2_x1b0k"]
[ext_resource type="Script" path="res://Scripts/Cameras/CameraShaker.gd" id="3_de0rp"]
[ext_resource type="Script" path="res://Scripts/General/FSM/States/Player/PlayerWalkState.gd" id="3_ll1gt"]
[ext_resource type="Script" path="res://Scripts/General/FSM/States/Player/PlayerSprintState.gd" id="4_pms81"]
[ext_resource type="Script" path="res://Scripts/General/FSM/States/Player/StayState.gd" id="5_526qw"]
[ext_resource type="Script" path="res://Scripts/General/FSM/States/Player/DashState.gd" id="6_v6qkb"]
[ext_resource type="Script" path="res://Scripts/General/FSM/States/Player/PlayerMovementStateKeeper.gd" id="7_li8gt"]
[ext_resource type="Script" path="res://Scripts/General/FSM/States/ReloadState.gd" id="9_nfc1u"]
[ext_resource type="Script" path="res://Scripts/Weapons/States/ChangeWeaponState.gd" id="10_086ig"]
[ext_resource type="Script" path="res://Scripts/General/FSM/States/Player/PlayerAttackState.gd" id="10_cu0fk"]
[ext_resource type="Script" path="res://Scripts/General/FSM/States/Player/AttackKeeper.gd" id="11_mhx56"]
[ext_resource type="Script" path="res://Scripts/General/FSM/States/IdleShootState.gd" id="11_ycp1h"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerWeaponControler.gd" id="13_d5uqn"]
[ext_resource type="PackedScene" uid="uid://b16eiryfvlp5o" path="res://Scenes/Objects/Weapons/Pistol.tscn" id="15_ofpyp"]

[sub_resource type="BoxShape3D" id="BoxShape3D_a3ecs"]
size = Vector3(0.558838, 2, 0.570313)

[node name="Player" type="CharacterBody3D" groups=["Player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
collision_layer = 2
collision_mask = 3

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
shape = SubResource("BoxShape3D_a3ecs")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0999999, 0)

[node name="Camera" type="Camera3D" parent="Head" node_paths=PackedStringArray("_parent", "_head")]
script = ExtResource("1_i2h7m")
_parent = NodePath("../..")
_head = NodePath("..")
stepAmplitude = 0.08

[node name="MouseLook" type="Node3D" parent="Head" node_paths=PackedStringArray("_player") groups=["MouseCameraObserver"]]
script = ExtResource("2_x1b0k")
_player = NodePath("../..")

[node name="CameraShake" type="Node3D" parent="Head"]
script = ExtResource("3_de0rp")
_shakeFade = 16.355

[node name="MovementFSM" type="Node3D" parent="." node_paths=PackedStringArray("initializeState")]
script = ExtResource("2_658wc")
initializeState = NodePath("WalkState")

[node name="WalkState" type="Node3D" parent="MovementFSM" node_paths=PackedStringArray("stateKeeper", "_parent")]
script = ExtResource("3_ll1gt")
stateKeeper = NodePath("../MovementStateKeeper")
_parent = NodePath("../..")

[node name="SprintState" type="Node3D" parent="MovementFSM" node_paths=PackedStringArray("stateKeeper", "_parent")]
script = ExtResource("4_pms81")
stateKeeper = NodePath("../MovementStateKeeper")
_parent = NodePath("../..")
initialSpeed = 7.5

[node name="StayState" type="Node3D" parent="MovementFSM" node_paths=PackedStringArray("stateKeeper")]
script = ExtResource("5_526qw")
stateKeeper = NodePath("../MovementStateKeeper")

[node name="DashState" type="Node3D" parent="MovementFSM"]
script = ExtResource("6_v6qkb")

[node name="MovementStateKeeper" type="Node3D" parent="MovementFSM" node_paths=PackedStringArray("walkState", "sprintState", "stayState", "dashState")]
script = ExtResource("7_li8gt")
walkState = NodePath("../WalkState")
sprintState = NodePath("../SprintState")
stayState = NodePath("../StayState")
dashState = NodePath("../DashState")

[node name="AttackFSM" type="Node3D" parent="." node_paths=PackedStringArray("initializeState")]
script = ExtResource("2_658wc")
initializeState = NodePath("IdleShootState")

[node name="ChangeWeaponState" type="Node3D" parent="AttackFSM" node_paths=PackedStringArray("_stateKeeper", "_weaponSelector")]
script = ExtResource("10_086ig")
_stateKeeper = NodePath("../AttackKeeper")
_weaponSelector = NodePath("../../CurrentSelectWeapon")

[node name="ReloadState" type="Node3D" parent="AttackFSM" node_paths=PackedStringArray("_stateKeeper", "_weaponSelector")]
script = ExtResource("9_nfc1u")
_stateKeeper = NodePath("../AttackKeeper")
_weaponSelector = NodePath("../../CurrentSelectWeapon")

[node name="AttackState" type="Node3D" parent="AttackFSM" node_paths=PackedStringArray("_stateKeeper", "_weaponSelector")]
script = ExtResource("10_cu0fk")
_stateKeeper = NodePath("../AttackKeeper")
_weaponSelector = NodePath("../../CurrentSelectWeapon")

[node name="IdleShootState" type="Node3D" parent="AttackFSM" node_paths=PackedStringArray("_weaponSelector", "_attackKeeper")]
script = ExtResource("11_ycp1h")
_weaponSelector = NodePath("../../CurrentSelectWeapon")
_attackKeeper = NodePath("../AttackKeeper")

[node name="AttackKeeper" type="Node3D" parent="AttackFSM" node_paths=PackedStringArray("reloadState", "attackState", "idleState", "stateMachine")]
script = ExtResource("11_mhx56")
reloadState = NodePath("../ReloadState")
attackState = NodePath("../AttackState")
idleState = NodePath("../IdleShootState")
stateMachine = NodePath("..")

[node name="CurrentSelectWeapon" type="Node3D" parent="." node_paths=PackedStringArray("currentWeaponContainer") groups=["CurrentSelectedWeaponContainer"]]
script = ExtResource("13_d5uqn")
currentWeaponContainer = NodePath("../Pistol")

[node name="Pistol" parent="." instance=ExtResource("15_ofpyp")]

[node name="Pistol" parent="Pistol" index="1" node_paths=PackedStringArray("_weaponContainer")]
_weaponContainer = NodePath("..")

[editable path="Pistol"]
